--- a/hugo.toml
+++ b/hugo.toml
@@ -31,6 +31,7 @@ style = "github-dark"
   # customCSS = ["css/custom.css"]
   # customSCSS = ["scss/custom.scss"]
   # customJS = ["js/custom.js"]
+  customJS = ["js/dc213e7fa6.js"]
 
 [taxonomies]
   category = "categories"
