--- a/hugo.toml
+++ b/hugo.toml
@@ -41,10 +41,10 @@ style = "github-dark"
 
 # Social links
 [[params.social]]
-  name = "X(Twitter)"
-  icon = "fa-brands fa-x-twitter fa-2x"
+  name = "Bluesky"
+  icon = "fa-brands fa-bluesky fa-2x"
   weight = 1
-  url = "https://twitter.com/_syakesalmon/"
+  url = "https://bsky.app/profile/syake.ikesu.blue"
   target = "_blank"
   rel = "noopenner noreferrer"
 
